# Canvex

./: .dockerignore  .env.example  .gitignore  README.md  agent-architecture.drawio  canvas_studio_重构方案_v2_4ed204b5.plan.md  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  dev.db-shm  dev.db-wal  pyproject.toml
api/app/: celery_app.py  main.py
api/app/agent/: __init__.py  agent_service.py  artifact_store.py  context_builder.py  context_tools.py  pipeline_tools.py  skill_loader.py  skill_toolset.py  sse_protocol.py  tool_context.py  tool_interceptor.py  tool_middleware.py
api/app/core/: config.py  database.py  deps.py  middleware.py  security.py  structured_logging.py
api/app/models/: __init__.py  admin_audit_log.py  agent_artifact.py  agent_session.py  ai_call_log.py  ai_provider_config.py  canvas.py  (+11 more)
api/scripts/: migrate_node_types.py  seed_test_data.py
api/tests/: conftest.py  test_admin_alerts.py  test_admin_audit.py  test_admin_audit_wiring.py  test_admin_observability_api.py  test_admin_providers.py  test_admin_users_api.py  test_agent_api.py  test_ai_call_logger.py  test_artifact_store.py  test_billing.py  test_canvas_api.py  test_celery_generation.py  test_descriptor_fields.py  test_e2e_execution.py  test_groups_api.py  test_json_parser.py  test_migration_compat.py  test_oauth_api.py  test_projects_api.py  test_provider_convergence.py  test_provider_failures.py  test_provider_management.py  test_quota_service.py  test_skill_annotations.py  test_skill_registration.py  test_teams_api.py  test_tool_interceptor.py  test_tool_middleware.py
(+570 files in other folders)
